--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,7 +64,80 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
-nav a {
-	
+nav{
+	position: fixed;
+	z-index: 999;
+	margin: 40px 50px 0px;
 
+}
+nav a {
+	color: black;
+	text-decoration: none;
+	margin: 0px 75px 0px;
+}
+nav img {
+	margin-left: 50px;
+}
+a {
+	text-decoration: none;
+}
+.getStarted {
+	display: inline-block;
+	border: 1px solid black;
+	padding: 5px 30px 5px;
+}
+h1 {
+	font-size: 70px;
+	
+}
+.headerText {
+	display: inline-block;
+	width: 65%;
+	text-align: center;
+	position: relative;
+	bottom: 100px;
+	top: 200px;
+	height: 600px;
+}
+header .headerImage{
+	position: relative;
+	bottom:100px;
+	top: 200px;
+	
+}
+
+.topContent {
+	border-top: 2px solid black;
+}
+.topContent div{
+	display: inline-block;
+	width: 48%;
+	padding: 50px;
+	
+}
+.middle-img {
+	width: 100%;
+	height: 250px;
+	padding: 0px 50px 0px;
+}
+
+.bottomContent {
+	border-bottom: 2px solid black;
+}
+
+.bottomContent div{
+	display: inline-block;
+	width: 30%;
+	padding: 50px;
+}
+
+.contact {
+	padding: 50px;
+}
+.contact p {
+	margin: 10px;
+}
+footer {
+	text-align: center;
+	margin: 10px 0px 100px;
 }
